# Kameyama_ws

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/D_op/: .catkin  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/detect_3d_cuboid/: .catkin  .rosinstall  setup.sh
devel/.private/line_lbd/: .catkin  local_setup.sh  setup.sh
devel/.private/line_msg/: .catkin  local_setup.sh
devel/.private/test_cpp/: .catkin  .rosinstall  local_setup.sh
logs/D_op/: build.cmake.000.log.stderr
logs/detect_3d_cuboid/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/tutorial_python/: build.check.012.log.stderr
logs/yolov5_ros/: build.make.000.log.stderr
logs/youbot_subscriber/: build.cmake.000.log.stderr
src/D_op/: CMakeLists.txt  d-op.txt  output.csv  process_cuboids
src/cube_slam/: cubeslam.txt
src/cuboid_analysis/: CMakeLists.txt
src/map_navigation2/: package.xml  setup.cfg  setup.py
src/map_navigation2/launch/: camera_launch.py  changetopicname_launch.py  circle_movement_launch.py  move_robot_launch.py  path_uncertainty_launch.py  picture_tracking_launch.py  second_move_robot_launch.py  tf2twist_launch.py  world_launch.py
src/map_navigation2/map_navigation2/: camera.py  changetopicname.py  circle_movement.py  move_robot.py  path_uncertainty.py  picture_tracking.py  second_move_robot.py  tf2twist.py  world.py
(+312 files in other folders)
