<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_navigation2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dasnote11@todo.todo">dasnote11</maintainer>
  <license>TODO: License declaration</license>


  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>tf2_ros_py</build_depend>
  <build_depend>turtlesim</build_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>turtlesim</exec_depend>
   <!-- <run_depend>tf2</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend> -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
